[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aibugger"
version = "0.1.0"
description = "AI-powered debugging tool that catches exceptions and provides fixes."
readme = "README.md"
authors = [{ name = "Jay Kang", email = "bk.kang@me.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/example/aibugger"
"Bug Tracker" = "https://github.com/example/aibugger/issues"
